# supervisor-example-obo

./: .env.example  AGENTS.md  CLAUDE.md  README.md  app.yaml  databricks.yml  manifest.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
SPECS/: PLAN_MODEL_SERVING.md  SPEC.md
agent_server/: agent.py  evaluate_agent.py  prompts.py  responses_agent.py  utils.py
scripts/: deploy.py  deploy_serving.py  log_model.py  setup_demo.py
spikes/serving-obo/: identity_echo.py  log_and_deploy.py
spikes/serving-obo-realagent/: log_and_deploy.py  supervisor_responses_agent.py
tests/: test_agent_wiring.py  test_responses_agent.py
