[project]
name = "supervisor-example-obo"
version = "0.1.0"
description = "Hierarchical LangGraph supervisor agent (L1 -> L2 -> Genie) on Databricks Apps, with end-user OBO."
readme = "README.md"
authors = [
    { name = "Agent Developer", email = "developer@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain>=0.17.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.13.0",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]


[project.scripts]
quickstart = "scripts.quickstart:main"
setup-demo = "scripts.setup_demo:main"
deploy = "scripts.deploy:main"
log-model = "scripts.log_model:main"
deploy-serving = "scripts.deploy_serving:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent:evaluate"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"


[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored from databricks/app-templates — keep upstream style.
extend-exclude = ["scripts", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
